# BarberRPC

./: CMakeLists.txt  client.cpp  common.h  server.cpp
